<resources>
    <string name="app_name">Material Design Explorer</string>
    <string name="app_name_short">MDX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation menu titles -->
    <string name="resources">Resources</string>
    <string name="colors">Colors</string>
    <string name="icons">Icons</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Toolbar titles -->
    <string name="colors_title">Material Colors</string>
    <string name="icons_title">Material Icons</string>

    <!-- Toolbar action titles -->
    <string name="action_search">Search</string>
    <string name="action_color_format">Color format</string>
    <string name="action_hex_format">#FFFFFF</string>
    <string name="action_rgb_format">rgb(255, 255, 255)</string>

    <string name="icon_search_hint">Search icons…</string>

    <string name="tone_copied_clipboard_label">Material Color</string>
    <string name="tone_copied_to_clipboard">%1$s is copied to clipboard!</string>

    <string name="about_content_html"><![CDATA[
        Material Design Explorer, <b>MDX</b>, is an app built by
        <a href=\'https://www.linkedin.com/in/erdemorman\'>Erdem Orman</a>
        for developers and designers.<br/><br/>

        Source code is available on Github
        <a href=\'https://github.com/erdemorman/mdx\'>github.com/erdemorman/mdx</a>
    ]]></string>

    <string name="dismiss">Dismiss</string>

</resources>
